[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uniandes-biopython"
version = "0.1.0"
description = "Analisis de Datos Biologicos en Python"
readme = "README.md"
authors = [
    {name="Nicolas Roldan Fajardo", email="nroldanfajardo@gmail.com"},
]
requires-python = ">3.10"
dependencies = [
    "transformers==4.42.3",
    "torch==2.3.1",
    "pandas==2.2.2",
    "matplotlib",
    "biopython==1.84",
    "pyarrow==16.1.0"
]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.5",
    "ipywidgets==8.1.3",
    "jupyterlab"
]
